<resources>
    <!-- Intro Activity -->
    <string name="app_name">ManagementAppProject</string>
    <string name="app_name_logo">ManageIT</string>
    <string name="image_contentDescription">Image</string>
    <string name="lets_get_started_text">Let\'s get started!</string>
    <string name="intro_text_description">Collaborate and Plan Together Across Multiple Device on ManageIT Minimalist Interface</string>
    <string name="signIn">Sign in</string>
    <string name="signUp">Sign up</string>

    <!-- SignUpIn Activity -->
    <string name="signUp_description_txt">Enter your name, your email id and password to register with us</string>
    <string name="signIn_description_txt">Enter your email and password</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>

    <!-- Dialog Progress -->
    <string name="please_click_back_again_to_exit">Pleas click back again to exit</string>
    <string name="please_wait">Please Wait&#8230;</string>

    <!-- Navigation Menu -->
    <string name="nav_my_profile">My Profile</string>
    <string name="nav_signOut">Sign Out</string>
    <string name="nav_username_txtView">Username</string>

    <!-- My Profile -->
    <string name="mobile">Mobile</string>
    <string name="update">UPDATE</string>
    <string name="my_profile_title">My Profile</string>

    <!-- Board activity -->
    <string name="create_board_title">Create Board</string>
    <string name="create">CREATE</string>
    <string name="board_name">Board Name</string>
    <string name="no_boards_available">No Boards are available</string>
    <string name="created_by">Created by</string>

    <!-- Item Task -->
    <string name="action_add_list">Add List</string>
    <string name="hint_list_name">List Name</string>
    <string name="action_add_card">Add Card</string>
    <string name="hint_card_name">Card Name</string>
    <string name="title">Title</string>
    <string name="add_list">Add List</string>

    <!-- Members Activity -->
    <string name="members">Members</string>

    <!-- Menu Add Member -->
    <string name="add_member">Add Member</string>
    <string name="cancel">CANCEL</string>
    <string name="add">ADD</string>

    <!-- Card Details Activity -->
    <string name="label_color">Label Color</string>
    <string name="select_color">Select Color</string>
    <string name="select_members">Select Members</string>
    <string name="due_date">Due Date</string>
    <string name="select_due_date">Select Due Date</string>

    <string name="delete_card">Delete Card</string>

    <string name="alert">Alert</string>
    <string name="confirmation_message_to_delete_card">Are you sure you wan to delete this card \'%1$s\'?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="str_select_label_color">Select Label Color</string>

    <string name="str_select_member">Select Member</string>

    <string name="default_notification_channel_id">managementappproject_notification_channel_id</string>

</resources>