<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_dialog_rounded"
        app:cardCornerRadius="@dimen/dialog_addMember_cv_cornerRadius"
        app:cardElevation="@dimen/dialog_addMember_cv_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/dialog_addMember_content_padding">

            <TextView
                android:id="@+id/tvDialogTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dialog_addMember_title_padding"
                android:text="@string/add_member"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/dialog_addMember_title_textSize"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dialog_addMember_divider_height"
                android:layout_marginTop="@dimen/dialog_addMember_divider_marginTopBottom"
                android:layout_marginBottom="@dimen/dialog_addMember_divider_marginTopBottom"
                android:background="@color/divider_color" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dialog_addMember_action_layout_marginTop">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_email_search_member"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/dialog_addMember_action_btn_textSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dialog_addMember_action_layout_height"
                android:layout_marginTop="@dimen/dialog_addMember_action_layout_marginTop"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_add"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:padding="@dimen/dialog_addMember_action_btn_padding"
                    android:text="@string/add"
                    android:textColor="@color/blue_ocean"
                    android:textSize="@dimen/dialog_addMember_action_btn_textSize" />

                <TextView
                    android:id="@+id/tv_cancel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:padding="@dimen/dialog_addMember_action_btn_padding"
                    android:text="@string/cancel"
                    android:textColor="@color/secondary_text_color"
                    android:textSize="@dimen/dialog_addMember_action_btn_textSize" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>